[tool.poetry]
name = "cars_api"
version = "0.1.0"
description = "Simple cars API"
authors = ["Adam Smelkowski"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
isort = "^5.8.0"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
